Add task guide usage

--- a/state-machine/responses/achieve_transitions/A2.md
+++ b/state-machine/responses/achieve_transitions/A2.md
@@ -3,6 +3,7 @@
 1. Read the `.ai/task/plan.md` file to identify which acceptance criteria were addressed
 2. Update the `.ai/task/plan.md` file to mark completed acceptance criteria
 3. Create a new `.ai/task/task.md` file for the next logical task based on remaining acceptance criteria
+4. Use the `.ai/task-guide.md` file for task creation guidance
 
 Task Results Content:
 [TASK_RESULTS_PLACEHOLDER]
@@ -22,4 +23,4 @@ We're now ready to define our next task based on the remaining acceptance criter
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the proposed next task I've created at `.ai/task/task.md`, modify it if needed, then use Accio to execute it when you're ready.
+Review the proposed next task I've created at `.ai/task/task.md`, modify it if needed. You can also check the `.ai/task-guide.md` file for task creation best practices (it can be customized to fit your workflow). Use Accio to execute it when you're ready.
