--- a/state-machine/responses/error_recovery/R1.md
+++ b/state-machine/responses/error_recovery/R1.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/plan.md` file to understand the project goals and acceptance criteria. Use the template in `.ai/task/task.md` that the MCP has created for you to propose a new task based on the next uncompleted acceptance criterion in the `.ai/task/plan.md` file.
+Read the `.ai/task/plan.md` file to understand the project goals and acceptance criteria. Use the template in `.ai/task/task.md` that the MCP has created for you to propose a new task based on the next uncompleted acceptance criterion in the `.ai/task/plan.md` file. Use the `.ai/task-guide.md` file for task creation guidance.
 
 ## Response to the Developer
 
@@ -17,4 +17,4 @@ We're now back in the `.ai/task/task.md` file drafting phase where we can define
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's complete the task definition in `.ai/task/task.md` with clear steps, then use Accio to execute it when ready.
+Let's complete the task definition in `.ai/task/task.md` with clear steps. You can also check the `.ai/task-guide.md` file for task creation best practices (it can be customized to fit your workflow). Use Accio to execute it when ready.
