--- a/state-machine/responses/error_recovery/R2.md
+++ b/state-machine/responses/error_recovery/R2.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/task-results.md` file to understand what was completed in the previous task. Update `.ai/task/plan.md` to mark any completed acceptance criteria based on these results. Then create a new task in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion. Note that the previous `.ai/task/task.md` and `.ai/task/task-results.md` have been archived to [ARCHIVE_PATH_PLACEHOLDER].
+Read the `.ai/task/task-results.md` file to understand what was completed in the previous task. Update `.ai/task/plan.md` to mark any completed acceptance criteria based on these results. Then create a new task in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion. Use the `.ai/task-guide.md` file for task creation guidance. Note that the previous `.ai/task/task.md` and `.ai/task/task-results.md` have been archived to [ARCHIVE_PATH_PLACEHOLDER].
 
 ## Response to the Developer
 
@@ -17,4 +17,4 @@ We're now drafting a new task in `.ai/task/task.md` based on the results of the 
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's review this new task in `.ai/task/task.md` and make any necessary adjustments before executing it with Accio.
+Let's review this new task in `.ai/task/task.md` and make any necessary adjustments. You can also check the `.ai/task-guide.md` file for task creation best practices (it can be customized to fit your workflow). Use Accio to execute it when ready.
