--- a/state-machine/responses/gather_transitions/G2.md
+++ b/state-machine/responses/gather_transitions/G2.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/plan.md` and the `.ai/task/task.md` file. Your goal is to propose the next smallest task that will help fulfill the remaining Acceptance Criteria in the `.ai/task/plan.md` file and put it into the `.ai/task/task.md` file following its template.
+Read the `.ai/task/plan.md` and the `.ai/task/task.md` file. Your goal is to propose the next smallest task that will help fulfill the remaining Acceptance Criteria in the `.ai/task/plan.md` file and put it into the `.ai/task/task.md` file following its template. Use the `.ai/task-guide.md` file for task creation guidance.
 
 ## Response to the Developer
 
@@ -17,4 +17,4 @@ We're now drafting a task in `.ai/task/task.md` where we'll define the specific 
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's review and refine the proposed task, then use Accio to execute it when we're ready.
+Let's review and refine the proposed task in `.ai/task/task.md`. You can also check the `.ai/task-guide.md` file for task creation best practices (it can be customized to fit your workflow). Use Accio to execute the task when we're ready.
