--- a/state-machine/responses/error_recovery/R3.md
+++ b/state-machine/responses/error_recovery/R3.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/plan.md` file to identify uncompleted acceptance criteria. Fill out the task template in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion. The previous incomplete task has been archived to [INCOMPLETE_ARCHIVE_PATH_PLACEHOLDER].
+Read the `.ai/task/plan.md` file to identify uncompleted acceptance criteria. Fill out the task template in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion. Use the `.ai/task-guide.md` file for task creation guidance. The previous incomplete task has been archived to [INCOMPLETE_ARCHIVE_PATH_PLACEHOLDER].
 
 ## Response to the Developer
 
@@ -17,4 +17,4 @@ We're back in the `.ai/task/task.md` file drafting phase with a fresh task based
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's review the `.ai/task/task.md` file in `.ai/task/task.md` and make any necessary adjustments before executing it with Accio.
+Let's review the `.ai/task/task.md` file and make any necessary adjustments. You can also check the `.ai/task-guide.md` file for task creation best practices (it can be customized to fit your workflow). Use Accio to execute it when ready.
