Added task-guide to more places.

--- a/state-machine/responses/achieve_transitions/A1.md
+++ b/state-machine/responses/achieve_transitions/A1.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/task.md` file, understand the task details, and then execute the task. Document your process and results in a new `.ai/task/task-results.md` file. Include:
+Read the `.ai/task/task.md` file, understand the task details, and then execute the task. Use the `.ai/task-guide.md` file for task execution guidance. Document your process and results in a new `.ai/task/task-results.md` file. Include:
 
 1. A summary of the task
 2. Steps you took to complete it
@@ -23,4 +23,4 @@ We've completed the task execution phase. The results have been recorded and are
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the `.ai/task/task.md` file results I've documented. You can modify the `.ai/task/task-results.md` file directly or ask me to amend it if you'd like to add or remove anything. When you're satisfied with the results, use Accio to process them and determine what to tackle next.
+Review the `.ai/task/task-results.md` file for results I've documented. You can modify the `.ai/task/task-results.md` file directly or ask me to amend it if you'd like to add or remove anything. When you're satisfied with the results, use Accio to process them and determine what to tackle next.
