--- a/state-machine/responses/lumos_transitions/L3.md
+++ b/state-machine/responses/lumos_transitions/L3.md
@@ -4,6 +4,7 @@ You are in the `.ai/task/task.md` file drafting phase where you define a specifi
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
 - `.ai/task/task.md`: The task you're currently drafting
+- `.ai/task-guide.md`: Task execution guidelines (can be customized)
 
 ### Available Spells
 - **Accio**: Executes the current task and documents results
