--- a/state-machine/responses/lumos_transitions/L8.md
+++ b/state-machine/responses/lumos_transitions/L8.md
@@ -5,6 +5,7 @@ You are drafting tasks to address PR review comments after entering from plan ed
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
 - `.ai/task/comments.md`: PR comments that have been collected
 - `.ai/task/review-task.md`: The review task being drafted
+- `.ai/task-guide.md`: Task execution guidelines (can be customized)
 
 ### Available Spells
 - **Accio**: Executes the current review task and documents results
