--- a/state-machine/responses/lumos_transitions/L9.md
+++ b/state-machine/responses/lumos_transitions/L9.md
@@ -7,6 +7,7 @@ You are drafting tasks to address PR review comments after entering from task ex
 - `.ai/task/review-task.md`: The review task being drafted
 - `.ai/task/task.md`: May exist if you were working on a task
 - `.ai/task/task-results.md`: May exist if you completed a task
+- `.ai/task-guide.md`: Task execution guidelines (can be customized)
 
 ### Available Spells
 - **Accio**: Executes the current review task and documents results
