--- a/state-machine/responses/pr_transitions/P1.md
+++ b/state-machine/responses/pr_transitions/P1.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/comments.md` file containing PR comments and the `.ai/task/review-task.md` template file. The `.ai/task/review-task.md` template has a predefined structure - follow this structure to fill in tasks that address each PR comment.
+Read the `.ai/task/comments.md` file containing PR comments and the `.ai/task/review-task.md` template file. The `.ai/task/review-task.md` template has a predefined structure - follow this structure to fill in tasks that address each PR comment. Use the `.ai/task-guide.md` file for task execution guidance.
 
 For each comment in `.ai/task/comments.md`:
 1. Analyze the comment to understand what changes are requested
