--- a/state-machine/responses/pr_transitions/P2.md
+++ b/state-machine/responses/pr_transitions/P2.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/review-task.md` file to understand what tasks need to be performed to address the PR comments. Execute each task in the `.ai/task/review-task.md` file:
+Read the `.ai/task/review-task.md` file to understand what tasks need to be performed to address the PR comments. Use the `.ai/task-guide.md` file for task execution guidance. Execute each task in the `.ai/task/review-task.md` file:
 
 1. Parse the task definitions from `.ai/task/review-task.md`
 2. For each task:
