Add recommendations about planning

--- a/state-machine/responses/error_recovery/R1.md
+++ b/state-machine/responses/error_recovery/R1.md
@@ -18,3 +18,5 @@ We're now back in the `.ai/task/task.md` file drafting phase where we can define
 
 ### Next Steps
 Let's complete the task definition in `.ai/task/task.md` with clear steps. You can also check the `.ai/task-guide.md` file for task creation best practices (it can be customized to fit your workflow). Use Accio to execute it when ready.
+
+> **💡 Tip**: Consider using Ask/Plan mode in your AI assistant to iterate on this file without accidentally executing the next step. Most AI agents like Cursor or Claude Code have a mode where they cannot edit files, which is useful for planning and refining content collaboratively before proceeding.
