--- a/state-machine/responses/lumos_transitions/L2.md
+++ b/state-machine/responses/lumos_transitions/L2.md
@@ -16,3 +16,5 @@ You are in the `.ai/task/plan.md` file editing phase where you define acceptance
 
 ### Next Steps
 Add at least one acceptance criterion to the `.ai/task/plan.md` file and then use **Accio** to start creating tasks, or use **Expecto** if you have Atlassian links in the `.ai/task/plan.md` file that you'd like to enrich with more information.
+
+> **💡 Tip**: Consider using Ask/Plan mode in your AI assistant to iterate on this file without accidentally executing the next step. Most AI agents like Cursor or Claude Code have a mode where they cannot edit files, which is useful for planning and refining content collaboratively before proceeding.
