--- a/state-machine/responses/lumos_transitions/L8.md
+++ b/state-machine/responses/lumos_transitions/L8.md
@@ -19,3 +19,5 @@ You are drafting tasks to address PR review comments after entering from plan ed
 
 ### Next Steps
 Review and refine the tasks in `.ai/task/review-task.md`, then use **Accio** to execute them when ready. If you want to exit the PR review flow, use **Reverto**.
+
+> **💡 Tip**: Consider using Ask/Plan mode in your AI assistant to iterate on this file without accidentally executing the next step. Most AI agents like Cursor or Claude Code have a mode where they cannot edit files, which is useful for planning and refining content collaboratively before proceeding.
