--- a/state-machine/responses/pr_transitions/P1.md
+++ b/state-machine/responses/pr_transitions/P1.md
@@ -22,3 +22,5 @@ We're now in the PR review task drafting phase where we'll plan how to address e
 
 ### Next Steps
 Review the tasks I've created in `.ai/task/review-task.md`, make any adjustments needed, then use Accio to execute them and apply the requested changes.
+
+> **💡 Tip**: Consider using Ask/Plan mode in your AI assistant to iterate on this file without accidentally executing the next step. Most AI agents like Cursor or Claude Code have a mode where they cannot edit files, which is useful for planning and refining content collaboratively before proceeding.
