--- a/state-machine/responses/achieve_transitions/A2.md
+++ b/state-machine/responses/achieve_transitions/A2.md
@@ -24,3 +24,5 @@ We're now ready to define our next task based on the remaining acceptance criter
 
 ### Next Steps
 Review the proposed next task I've created at `.ai/task/task.md`, modify it if needed. You can also check the `.ai/task-guide.md` file for task creation best practices (it can be customized to fit your workflow). Use Accio to execute it when you're ready.
+
+> **💡 Tip**: Consider using Ask/Plan mode in your AI assistant to iterate on this file without accidentally executing the next step. Most AI agents like Cursor or Claude Code have a mode where they cannot edit files, which is useful for planning and refining content collaboratively before proceeding.
