--- a/state-machine/responses/gather_transitions/G2.md
+++ b/state-machine/responses/gather_transitions/G2.md
@@ -18,3 +18,5 @@ We're now drafting a task in `.ai/task/task.md` where we'll define the specific 
 
 ### Next Steps
 Let's review and refine the proposed task in `.ai/task/task.md`. You can also check the `.ai/task-guide.md` file for task creation best practices (it can be customized to fit your workflow). Use Accio to execute the task when we're ready.
+
+> **💡 Tip**: Consider using Ask/Plan mode in your AI assistant to iterate on this file without accidentally executing the next step. Most AI agents like Cursor or Claude Code have a mode where they cannot edit files, which is useful for planning and refining content collaboratively before proceeding.
