--- a/state-machine/responses/lumos_transitions/L23.md
+++ b/state-machine/responses/lumos_transitions/L23.md
@@ -17,3 +17,5 @@ We're in the context gathering phase where you're providing information about yo
 
 ### Next Steps
 Continue editing your `.ai/task/context.md` file with project details, requirements, and any Jira/Confluence URLs. When ready, use **Accio** to generate your structured plan.
+
+> **💡 Tip**: Consider using Ask/Plan mode in your AI assistant to iterate on this file without accidentally executing the next step. Most AI agents like Cursor or Claude Code have a mode where they cannot edit files, which is useful for planning and refining content collaboratively before proceeding.
