--- a/state-machine/responses/lumos_transitions/L3.md
+++ b/state-machine/responses/lumos_transitions/L3.md
@@ -18,3 +18,5 @@ You are in the `.ai/task/task.md` file drafting phase where you define a specifi
 
 ### Next Steps
 Review and refine the task in `.ai/task/task.md`, then use **Accio** to execute it when ready. If you need to adjust your plan first, use **Finite** to return to plan editing.
+
+> **💡 Tip**: Consider using Ask/Plan mode in your AI assistant to iterate on this file without accidentally executing the next step. Most AI agents like Cursor or Claude Code have a mode where they cannot edit files, which is useful for planning and refining content collaboratively before proceeding.
