Add actions and conditions

--- a/state-machine/responses/achieve_transitions/A4.md
+++ b/state-machine/responses/achieve_transitions/A4.md
@@ -16,4 +16,4 @@ We remain in the completion phase, with all acceptance criteria met.
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-To continue development, use Finite to return to plan editing and add new acceptance criteria, or use Reparo to initiate a PR review process for your completed work.
+To continue development, use Finite to return to plan editing and add new acceptance criteria, or use Reparo to initiate a PR review process for your completed work. Acceptance criteria are lines that start with `- [ ]` format, representing specific goals that need to be achieved (e.g., `- [ ] Add error handling`).
