--- a/state-machine/responses/finite_transitions/F2.md
+++ b/state-machine/responses/finite_transitions/F2.md
@@ -18,6 +18,6 @@ We're now back in the planning phase where we can celebrate our progress and dec
 
 ### Next Steps
 Congratulations on completing all acceptance criteria! You can now:
-1. Add new acceptance criteria to `.ai/task/plan.md` if you want to continue development
+1. Add new acceptance criteria to `.ai/task/plan.md` if you want to continue development (acceptance criteria are lines that start with `- [ ]` format, representing specific goals that need to be achieved)
 2. Use Reparo to start a PR review process for the work completed
 3. Review the `.ai/task/plan.md` file to see everything that was accomplished
