--- a/state-machine/responses/gather_transitions/G3.md
+++ b/state-machine/responses/gather_transitions/G3.md
@@ -17,4 +17,4 @@ We're still in the planning phase. Before moving forward, we need to define what
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's add at least one acceptance criterion to our `.ai/task/plan.md` file, then use Accio again to proceed to task creation.
+Let's add at least one acceptance criterion to our `.ai/task/plan.md` file, then use Accio again to proceed to task creation. Acceptance criteria are lines that start with `- [ ]` format, representing specific goals that need to be achieved (e.g., `- [ ] Implement user authentication`).
