--- a/state-machine/responses/pr_transitions/P3.md
+++ b/state-machine/responses/pr_transitions/P3.md
@@ -22,4 +22,4 @@ We're back in the `.ai/task/plan.md` file editing phase where we can continue re
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the `.ai/task/plan.md` file updates I've made based on the PR feedback. You can continue editing the plan and when ready, use Accio to create a new task.
+Review the `.ai/task/plan.md` file updates I've made based on the PR feedback. You can continue editing the plan and when ready, use Accio to create a new task. If you need to add more acceptance criteria, remember they are lines that start with `- [ ]` format, representing specific goals that need to be achieved.
