--- a/state-machine/responses/universal_expecto/E2.md
+++ b/state-machine/responses/universal_expecto/E2.md
@@ -37,7 +37,7 @@ We're in the `.ai/task/plan.md` file editing phase, where we're refining our pro
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the additional information I've incorporated from your Atlassian resources. Continue refining the plan and defining acceptance criteria. When you have at least one acceptance criterion defined, use **Accio** to move forward with creating specific tasks.
+Review the additional information I've incorporated from your Atlassian resources. Continue refining the plan and defining acceptance criteria. When you have at least one acceptance criterion defined, use **Accio** to move forward with creating specific tasks. Acceptance criteria are lines that start with `- [ ]` format, representing specific goals that need to be achieved.
 
 ### Atlassian Integration Unavailable Response:
 
@@ -60,4 +60,4 @@ To enable Atlassian integration:
 2. Configure the Atlassian integration for this environment
 3. Try the **Expecto** spell again once configured
 
-Alternatively, you can continue without Atlassian integration by adding acceptance criteria manually and using **Accio** to proceed when ready.
+Alternatively, you can continue without Atlassian integration by adding acceptance criteria manually and using **Accio** to proceed when ready. Acceptance criteria are lines that start with `- [ ]` format, representing specific goals that need to be achieved.
