--- a/state-machine/responses/error_recovery/R4.md
+++ b/state-machine/responses/error_recovery/R4.md
@@ -16,4 +16,4 @@ We're starting fresh in the planning phase where we'll define what we want to ac
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's fill out this plan at `.ai/task/plan.md` with our project goals and at least one specific acceptance criterion, then use Accio to start creating tasks.
+Let's fill out this plan at `.ai/task/plan.md` with our project goals and at least one specific acceptance criterion, then use Accio to start creating tasks. Acceptance criteria are lines that start with `- [ ]` format, representing specific goals that need to be achieved (e.g., `- [ ] Implement login functionality`).
