--- a/state-machine/responses/error_recovery/R2.md
+++ b/state-machine/responses/error_recovery/R2.md
@@ -1,6 +1,9 @@
 ## Response to the AI
 
-Read the `.ai/task/task-results.md` file to understand what was completed in the previous task. Update `.ai/task/plan.md` to mark any completed acceptance criteria based on these results. Then create a new task in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion. Use the `.ai/task-guide.md` file for task creation guidance. Note that the previous `.ai/task/task.md` and `.ai/task/task-results.md` have been archived to [ARCHIVE_PATH_PLACEHOLDER].
+Use the task results content below to understand what was completed in the previous task. Update `.ai/task/plan.md` to mark any completed acceptance criteria based on these results. Then create a new task in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion. Use the `.ai/task-guide.md` file for task creation guidance. Note that the previous `.ai/task/task.md` and `.ai/task/task-results.md` have been archived to [ARCHIVE_PATH_PLACEHOLDER].
+
+**Previous Task Results:**
+[TASK_RESULTS_PLACEHOLDER]
 
 ## Response to the Developer
 
