--- a/state-machine/responses/error_recovery/R3.md
+++ b/state-machine/responses/error_recovery/R3.md
@@ -1,6 +1,13 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
 
-Read the `.ai/task/plan.md` file to identify uncompleted acceptance criteria. Fill out the task template in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion. Use the `.ai/task-guide.md` file for task creation guidance. The previous incomplete task has been archived to [INCOMPLETE_ARCHIVE_PATH_PLACEHOLDER].
+**EXECUTE IMMEDIATELY:**
+1. Read the `.ai/task/plan.md` file to identify uncompleted acceptance criteria
+2. Read the existing `.ai/task/task.md` file to understand the template format
+3. Fill out the task template focusing on the next uncompleted acceptance criterion
+4. Use the `.ai/task-guide.md` file for task creation guidance
+5. **DELIVERABLE**: Completed task file following existing template format based on remaining acceptance criteria
+
+Note: The previous incomplete task has been archived to [INCOMPLETE_ARCHIVE_PATH_PLACEHOLDER].
 
 ## Response to the Developer
 
