--- a/state-machine/responses/error_recovery/R1.md
+++ b/state-machine/responses/error_recovery/R1.md
@@ -1,6 +1,11 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
 
-Read the `.ai/task/plan.md` file to understand the project goals and acceptance criteria. Use the template in `.ai/task/task.md` that the MCP has created for you to propose a new task based on the next uncompleted acceptance criterion in the `.ai/task/plan.md` file. Use the `.ai/task-guide.md` file for task creation guidance.
+**EXECUTE IMMEDIATELY:**
+1. Read the `.ai/task/plan.md` file and understand all project goals and acceptance criteria
+2. Read the existing `.ai/task/task.md` file to understand the template format
+3. Propose a new task based on the next uncompleted acceptance criterion from the plan
+4. Use the `.ai/task-guide.md` file for task creation guidance
+5. **DELIVERABLE**: Completed task proposal in `.ai/task/task.md` following existing template format
 
 ## Response to the Developer
 
