--- a/state-machine/responses/error_recovery/R2.md
+++ b/state-machine/responses/error_recovery/R2.md
@@ -1,6 +1,12 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
 
-Use the task results content below to understand what was completed in the previous task. Update `.ai/task/plan.md` to mark any completed acceptance criteria based on these results. Then create a new task in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion. Use the `.ai/task-guide.md` file for task creation guidance. Note that the previous `.ai/task/task.md` and `.ai/task/task-results.md` have been archived to [ARCHIVE_PATH_PLACEHOLDER].
+**EXECUTE IMMEDIATELY:**
+1. Read the task results content below to understand what was completed in the previous task
+2. Update `.ai/task/plan.md` to mark any completed acceptance criteria based on these results
+3. Read the existing `.ai/task/task.md` file to understand the template format
+4. Create a new task in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion
+5. Use the `.ai/task-guide.md` file for task creation guidance
+6. **DELIVERABLE**: Updated plan file with marked criteria and new task file following existing template format
 
 **Previous Task Results:**
 [TASK_RESULTS_PLACEHOLDER]
