--- a/state-machine/responses/pr_transitions/P1.md
+++ b/state-machine/responses/pr_transitions/P1.md
@@ -1,12 +1,13 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
 
-containing PR comments and the `.ai/task/review-task.md` template file. The `.ai/task/review-task.md` template has a predefined structure - follow this structure to fill in tasks that address each PR comment. Use the `.ai/task-guide.md` file for task execution guidance.
-
-For each comment in `.ai/task/comments.md`:
-
-1. Analyze the comment to understand what changes are requested
-2. Add a task to `.ai/task/review-task.md` following the template format
-3. Include specific acceptance criteria for each task
+**EXECUTE IMMEDIATELY:**
+1. Read the PR comments from the `.ai/task/comments.md` file
+2. Read the existing `.ai/task/review-task.md` template to understand the predefined structure
+3. For each comment, analyze what changes are requested
+4. Add tasks to `.ai/task/review-task.md` following the template format
+5. Include specific acceptance criteria for each task
+6. Use the `.ai/task-guide.md` file for task execution guidance
+7. **DELIVERABLE**: Completed review-task.md file with structured tasks addressing all PR comments
 
 ## Response to the Developer
 
