--- a/state-machine/responses/pr_transitions/P2.md
+++ b/state-machine/responses/pr_transitions/P2.md
@@ -1,17 +1,21 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
 
-Read the `.ai/task/review-task.md` file to understand what tasks need to be performed to address the PR comments. Use the `.ai/task-guide.md` file for task execution guidance. Execute each task in the `.ai/task/review-task.md` file:
+**EXECUTE IMMEDIATELY:**
 
-1. Parse the task definitions from `.ai/task/review-task.md`
-2. For each task:
+1. Read the `.ai/task/review-task.md` file to understand what tasks need to be performed to address the PR comments
+2. Use the `.ai/task-guide.md` file for task execution guidance
+3. Parse the task definitions from `.ai/task/review-task.md`
+4. For each task:
    - Make the required code changes
    - Document what was changed and why
    - Verify the change addresses the PR comment
-3. Document all results in `.ai/task/review-task-results.md`, including:
+5. Document all results in `.ai/task/review-task-results.md`, including:
    - Summary of all changes made
    - Code snippets of before/after for each change
    - Any challenges encountered and how they were resolved
    - For any tasks that couldn't be completed, explain why
+
+**DELIVERABLE**: Complete implementation of all PR review tasks with comprehensive documentation in `.ai/task/review-task-results.md`
 
 ## Response to the Developer
 
