--- a/state-machine/responses/gather_transitions/G2.md
+++ b/state-machine/responses/gather_transitions/G2.md
@@ -1,6 +1,12 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
 
-Read the `.ai/task/plan.md` and the `.ai/task/task.md` file. Your goal is to propose the next smallest task that will help fulfill the remaining Acceptance Criteria in the `.ai/task/plan.md` file and put it into the `.ai/task/task.md` file following its template. Use the `.ai/task-guide.md` file for task creation guidance.
+**EXECUTE IMMEDIATELY:**
+1. Read the `.ai/task/plan.md` file and identify remaining acceptance criteria
+2. Read the existing `.ai/task/task.md` file to understand the template format
+3. Propose the next smallest task that helps fulfill remaining acceptance criteria
+4. Update the `.ai/task/task.md` file following the existing template structure
+5. Use the `.ai/task-guide.md` file for task creation guidance
+6. **DELIVERABLE**: Updated task file with specific, actionable next steps based on plan requirements
 
 ## Response to the Developer
 
