--- a/state-machine/responses/gather_transitions/G5.md
+++ b/state-machine/responses/gather_transitions/G5.md
@@ -1,28 +1,13 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
 
-Read the empty `.ai/task/comments.md` file, and then:
-
-1. Check if GitHub MCP is available using this approach:
-   - Check your available tools/functions for GitHub-related capabilities (look for functions containing terms like "github", "gh", or "git" in their names or descriptions)
-   - Try a minimal call such as a simple repository search using a generic term like "test" OR list the repositories the authenticated user can access
-   - Analyze the response:
-     - If you receive GitHub data, the integration is working and authenticated
-     - If you receive an authentication error, the integration exists but requires authentication
-     - If no GitHub tools/functions are available, the integration is not installed
-
-2. Based on GitHub MCP availability:
-   - If GitHub MCP is available: Fetch PR comments for the current branch
-   - If GitHub MCP is not available: Guide the user through setting it up
-
-3. If there are PR comments:
-   - Format and write comments to `.ai/task/comments.md`
-   - Provide a summary of the feedback
-   - Use the "Comments Found" response to the developer
-
-4. If no PR exists or no comments found:
-   - Explicitly document this in `.ai/task/comments.md`
-   - Explain to the user that no comments were found
-   - Use the "No Comments Found" response to the developer
+**EXECUTE IMMEDIATELY:**
+1. Read the empty `.ai/task/comments.md` file to understand the context
+2. Check if GitHub MCP is available by examining your available tools/functions for GitHub-related capabilities
+3. Test GitHub MCP with a minimal call (simple repository search or list accessible repositories) and analyze the response
+4. Based on GitHub MCP availability, either fetch PR comments for current branch or guide user through setup
+5. If PR comments exist: format and write them to `.ai/task/comments.md` with feedback summary
+6. If no PR/comments found: document this explicitly in `.ai/task/comments.md` with explanation
+7. **DELIVERABLE**: Updated `.ai/task/comments.md` file with PR comment analysis or documentation of no comments found
 
 ## Response to the Developer
 
