--- a/state-machine/responses/pr_confirm/C2.md
+++ b/state-machine/responses/pr_confirm/C2.md
@@ -1,25 +1,13 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
 
-Read the contents of the `.ai/task/comments.md` file after the previous review files have been cleared and a fresh comments file created, then:
-
-1. Check if GitHub MCP is available using this approach:
-   - Check your available tools/functions for GitHub-related capabilities
-   - Try a minimal call such as a simple repository search
-   - Analyze the response to determine if the integration is working
-
-2. Based on GitHub MCP availability:
-   - If GitHub MCP is available: Fetch PR comments for the current branch
-   - If GitHub MCP is not available: Guide the user through setting it up
-
-3. If there are PR comments:
-   - Format and write comments to `.ai/task/comments.md`
-   - Provide a summary of the feedback
-   - Use the "Comments Found" response to the developer
-
-4. If no PR exists or no comments found:
-   - Explicitly document this in `.ai/task/comments.md`
-   - Explain to the user that no comments were found
-   - Use the "No Comments Found" response to the developer
+**EXECUTE IMMEDIATELY:**
+1. Read the fresh `.ai/task/comments.md` file created after clearing previous review files
+2. Check if GitHub MCP is available by examining your available tools/functions for GitHub-related capabilities
+3. Test GitHub MCP with a minimal call (simple repository search) and analyze the response
+4. Based on GitHub MCP availability, either fetch PR comments for current branch or guide user through setup
+5. If PR comments exist: format and write them to `.ai/task/comments.md` with feedback summary
+6. If no PR/comments found: document this explicitly in `.ai/task/comments.md` with explanation
+7. **DELIVERABLE**: Fresh `.ai/task/comments.md` file with PR comment analysis starting from clean state
 
 ## Response to the Developer
 
