--- a/state-machine/responses/pr_transitions/P3.md
+++ b/state-machine/responses/pr_transitions/P3.md
@@ -1,4 +1,6 @@
-## Response to the AI
+## MANDATORY ACTION FOR AI
+
+**EXECUTE IMMEDIATELY:**
 
 1. Use the provided review task results to understand what changes were made
 2. Update `.ai/task/plan.md` with a summary of these changes
@@ -6,6 +8,8 @@
 
 Review Task Results Content:
 [REVIEW_TASK_RESULTS_PLACEHOLDER]
+
+**DELIVERABLE**: Updated `.ai/task/plan.md` file with summary of PR review changes and user guidance for next steps
 
 ## Response to the Developer
 
