Fixed task results

--- a/state-machine/responses/error_recovery/R2.md
+++ b/state-machine/responses/error_recovery/R2.md
@@ -2,15 +2,12 @@
 
 **EXECUTE IMMEDIATELY:**
 
-1. Read the task results content below to understand what was completed in the previous task
+1. Read [TASK_RESULTS_FILE_PLACEHOLDER] to understand what was completed in the previous task
 2. Update `.ai/task/plan.md` to mark any completed acceptance criteria based on these results
 3. Read the existing `.ai/task/task.md` file to understand the template format
 4. Create a new task in `.ai/task/task.md` focusing on the next uncompleted acceptance criterion
 5. Use the `.ai/task-guide.md` file for task creation guidance
 6. **DELIVERABLE**: Updated plan file with marked criteria and new task file following existing template format
-
-**Previous Task Results:**
-[TASK_RESULTS_PLACEHOLDER]
 
 ## Response to the Developer
 
