--- a/state-machine/responses/pr_transitions/P3.md
+++ b/state-machine/responses/pr_transitions/P3.md
@@ -2,12 +2,9 @@
 
 **EXECUTE IMMEDIATELY:**
 
-1. Use the provided review task results to understand what changes were made
+1. Read [REVIEW_TASK_RESULTS_FILE_PLACEHOLDER] to understand what changes were made
 2. Update `.ai/task/plan.md` with a summary of these changes
 3. Guide the user on next steps for plan editing
-
-Review Task Results Content:
-[REVIEW_TASK_RESULTS_PLACEHOLDER]
 
 **DELIVERABLE**: Updated `.ai/task/plan.md` file with summary of PR review changes and user guidance for next steps
 
