--- a/state-machine/responses/achieve_transitions/A2.md
+++ b/state-machine/responses/achieve_transitions/A2.md
@@ -2,14 +2,12 @@
 
 **EXECUTE IMMEDIATELY:**
 
-1. Read the `.ai/task/plan.md` file and identify which acceptance criteria were addressed
-2. Update the `.ai/task/plan.md` file to mark all completed acceptance criteria
-3. Create a new `.ai/task/task.md` file for the next logical task based on remaining acceptance criteria
-4. Use the `.ai/task-guide.md` file for task creation guidance
-5. **DELIVERABLE**: Updated plan file and new task file with clear next steps
-
-Task Results Content:
-[TASK_RESULTS_PLACEHOLDER]
+1. Read [TASK_RESULTS_FILE_PLACEHOLDER] to understand what was completed in the previous task
+2. Read the `.ai/task/plan.md` file and identify which acceptance criteria were addressed
+3. Update the `.ai/task/plan.md` file to mark all completed acceptance criteria
+4. Create a new `.ai/task/task.md` file for the next logical task based on remaining acceptance criteria
+5. Use the `.ai/task-guide.md` file for task creation guidance
+6. **DELIVERABLE**: Updated plan file and new task file with clear next steps
 
 ## Response to the Developer
 
